Updating logo description

--- a/about/index.html
+++ b/about/index.html
@@ -88,7 +88,7 @@ It makes use of a variety of open source projects including:
     <div class="logo">
         
             <span class="logo__mark">></span>
-            <span class="logo__text">$ cd /eduardgz/</span>
+            <span class="logo__text">$ cd ~eduardgz</span>
             <span class="logo__cursor" style=
                   "
                    
