--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="logo">
         
             <span class="logo__mark">></span>
-            <span class="logo__text">$ cd /eduardgz/</span>
+            <span class="logo__text">$ cd ~eduardgz</span>
             <span class="logo__cursor" style=
                   "
                    
