Update my presentation

--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@ Durante mi estancia académica realice una estadía de investigación en el marc
 
     <title>
         
-            Eduardo Peralta Rodríguez :: eduardgz  — My Blog
+            Eduardo Peralta Rodríguez :: @eduardgz  — My Blog
         
     </title>
 
@@ -26,7 +26,7 @@ Durante mi estancia académica realice una estadía de investigación en el marc
 
 
 
-<link rel="stylesheet" href="https://eduardguez.github.io/main.min.ff4a2df9dcd9662eec6360e8e5849a2acd09e5a7e169bcb614ae91091c3e2c53.css">
+<link rel="stylesheet" href="https://eduardguez.github.io/main.min.8cb83b28fb712fc686e9c3d5158c04a7682854aec34f6a5d8eb626c7874d258f.css">
 
 
 
