--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 
     <title>
         
-            404 Page not found :: eduardgz  — My Blog
+            404 Page not found :: @eduardgz  — My Blog
         
     </title>
 
@@ -25,7 +25,7 @@
 
 
 
-<link rel="stylesheet" href="https://eduardguez.github.io/main.min.ff4a2df9dcd9662eec6360e8e5849a2acd09e5a7e169bcb614ae91091c3e2c53.css">
+<link rel="stylesheet" href="https://eduardguez.github.io/main.min.8cb83b28fb712fc686e9c3d5158c04a7682854aec34f6a5d8eb626c7874d258f.css">
 
 
 
